force-app/main/default/objects/Video__c/fields/Video_1_Cover_Image__c.field-meta.xml
<CustomField>
    <fullName>Video_1_Cover_Image__c</fullName>
    <label>Video 1 Cover Image</label>
    <type>Url</type>
</CustomField>