force-app/main/default/objects/Video__c/fields/Video_1_Url__c.field-meta.xml
<CustomField>
    <fullName>Video_1_Url__c</fullName>
    <label>Video 1 Url</label>
    <type>Url</type>
</CustomField>