force-app/main/default/objects/Video__c/fields/Video_2_Title__c.field-meta.xml
<CustomField>
    <fullName>Video_2_Title__c</fullName>
    <label>Video 2 Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>