force-app/main/default/objects/Video__c/fields/Video_2_Url__c.field-meta.xml
<CustomField>
    <fullName>Video_2_Url__c</fullName>
    <label>Video 2 Url</label>
    <type>Url</type>
</CustomField>