force-app/main/default/objects/Video__c/fields/Video_3_Description__c.field-meta.xml
<CustomField>
    <fullName>Video_3_Description__c</fullName>
    <label>Video 3 Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>