force-app/main/default/objects/Video__c/fields/Video_3_Url__c.field-meta.xml
<CustomField>
    <fullName>Video_3_Url__c</fullName>
    <label>Video 3 Url</label>
    <type>Url</type>
</CustomField>